--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,13 +1,29 @@
 version: "2.0"
 rules:
+- rule: start_daily_questionairre
+  steps:
+    - intent: affirm_daily_q
+    - action: utter_positive_affirmation_qs
+    - action: daily_form
+    - active_loop: daily_form
+#- rule: start forms
+#  steps:
+#    - intent: start
+#    - action: action_fill_slots
+#    - action: utter_consent
+- rule: daily form intial
+  steps:
+    - intent: show_questionairre
+    - action: utter_daily_q_confirm
 - rule: Say goodbye anytime the user says goodbye
   steps:
   - intent: goodbye
   - action: utter_goodbye
 - rule: Say 'I am a bot' anytime the user challenges
   steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - intent: affirm
+  - action: name_form
+  - active_loop: name_form
 - rule: Submit name form
   condition:
   - active_loop: name_form
@@ -16,7 +32,7 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-  - action: utter_submit
+  - action: utter_intial_submit
   - action: utter_daily_inform
 - rule: Submit daily form
   condition:
