--- a/domain.yml
+++ b/domain.yml
@@ -27,12 +27,19 @@ intents:
     use_entities: true
 - show_questionairre:
     use_entities: true
+- affirm_daily_q:
+    use_entities: true
 - restart:
     use_entities: true
 - start:
     use_entities: true
-entities: []
 slots:
+  autonomy_result:
+    type: categorical
+    values:
+      - good
+      - bad
+    influence_conversation: true
   consent:
     type: rasa.shared.core.slots.BooleanSlot
     initial_value: null
@@ -43,7 +50,7 @@ slots:
     initial_value: null
     auto_fill: true
     influence_conversation: true
-  last_name:
+  first_name:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
@@ -57,87 +64,87 @@ slots:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   prendre_du_recul:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   employment:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   atteindre_des_objectifs:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   surmont_les_obstacles:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   faire_face_au_stress:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   demander_du_soutien:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   maintenir_la_motivation:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   choisir_de_maniere_informe:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Remettre_en_question:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Réduire_des_douleurs:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Vivre_sans_être_interrompu_par_la_maladie:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Empêcher_les_perturbations_nocturnes:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Gérer_alternativement_les_douleurs:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Contrôler_la_fatigue:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Gérer_la_dépression:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Vivre_de_manière_autonome:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: false
   Vivre_sans_limites:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
@@ -263,9 +270,13 @@ slots:
     initial_value: null
     auto_fill: true
     influence_conversation: false
+entities: []
 responses:
   utter_greet:
   - text: Hey! How are you?
+  utter_sorry_for_pain:
+    - text: Oh, je suis désolé d'entendre cela
+    - text: C'est terrible, une fois que vous remplissez le formulaire, je peux suggérer quelques façons d'aider
   utter_cheer_up:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
@@ -282,10 +293,13 @@ responses:
   utter_consent:
   - buttons:
     - payload: /affirm
-      title: Yes
+      title: Ok allons-y!
     - payload: /deny
       title: No
-    text: Great! First, I'll ask you some basic questions to understand you better
+    text: Salut {first_name}, Cette fonctionnalité de Trevor est encore au stade de prototype. N'hésite pas écrire dans le groupe de discussino si tu ne comprends pas quelque chose, si tu veux suggérer des modifications ou partager ton mécontentement :) J'aimerais d'abord vous poser quelques questions. Mais avant tout de chose, pour mieux comprendre le contexte de ta question, j'ai besoin que tu m'en dises un peu sur ton autonomie générale en matière de gestion de la drépanocytose?
+    button_type: reply
+  utter_intial_submit:
+    - text: Merci beaucoup pour ces informations!
   utter_ask_gender:
   - text: De quel sexe es-tu? Il n'y a que deux options pour l'instant ca mais tu pourras toujours modifier cela quand tu veux
   utter_ask_age:
@@ -307,6 +321,7 @@ responses:
     - payload: Pas du tout d'accord
       title: Pas du tout d'accord
     text: En matière de gestion de la drépanocytose, je pense savoir quels sont les aspects dont je suis insatisfait?
+    button_type: reply
   utter_ask_atteindre_des_objectifs:
   - buttons:
     - payload: Tout à fait d'accord
@@ -320,6 +335,7 @@ responses:
     - payload: Pas du tout d'accord
       title: Pas du tout d'accord
     text: En général, je pense pouvoir essayer différentes manières pour surmonter les obstacles qui entravent l'atteinte de mes objectifs en matière de gestion de la drépanocytose?
+    button_type: reply
   utter_ask_surmont_les_obstacles:
   - buttons:
     - payload: Tout à fait d'accord
@@ -333,6 +349,7 @@ responses:
     - payload: Pas du tout d'accord
       title: Pas du tout d'accord
     text: En général, je pense pouvoir essayer différentes manières pour surmonter les obstacles qui entravent l'atteinte de mes objectifs en matière de gestion de la drépanocytose?
+    button_type: reply
   utter_ask_faire_face_au_stress:
   - buttons:
     - payload: Tout à fait d'accord
@@ -346,6 +363,7 @@ responses:
     - payload: Pas du tout d'accord
       title: Pas du tout d'accord
     text: En général, je pense connaître les moyens positifs que j'utilise pour faire face au stress que provoque la drépanocytose?
+    button_type: reply
   utter_ask_demander_du_soutien:
   - buttons:
     - payload: Tout à fait d'accord
@@ -528,6 +546,7 @@ responses:
     - payload: Parfaitement bien
       title: Parfaitement bien
     text: Ta journée s'est bien passée ?
+    button_type: reply
   utter_ask_dormi_la_nuit:
   - buttons:
     - payload: Pas du tout bien
@@ -540,7 +559,8 @@ responses:
       title: Très bien
     - payload: Parfaitement bien
       title: Parfaitement bien
-    text: As-tu bien dormi la nuit dernière ??
+    text: As-tu bien dormi la nuit dernière ?
+    button_type: reply
   utter_ask_humeur:
   - buttons:
     - payload: Pas du tout bien
@@ -554,6 +574,7 @@ responses:
     - payload: Parfaitement bien
       title: Parfaitement bien
     text: Ton humeur était-elle bonne ?
+    button_type: reply
   utter_ask_globalment:
   - text: Comment te sens-tu globalement ?
   utter_ask_effort_exagéré:
@@ -571,6 +592,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: As-tu dû faire un effort exagéré aujourd'hui ? (par exemple courir après un bus)?
+    button_type: reply
   utter_ask_senti_plus_fatigue:
   - buttons:
     - payload: Pas du tout
@@ -586,6 +608,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: T'es-tu senti plus fatigué que d'habitude ?
+    button_type: reply
   utter_ask_senti_plus_stress:
   - buttons:
     - payload: Pas du tout
@@ -601,6 +624,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: T'es-tu senti plus stressé ou contrarié que d'habitude ?
+    button_type: reply
   utter_ask_froid_ou_ressenti:
   - buttons:
     - payload: Pas du tout
@@ -616,6 +640,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: As-tu attrapé froid ou ressenti un signe d'infection? (p. ex., frissons, éternuements, sécheresse buccale, fièvre)
+    button_type: reply
   utter_ask_perdu_appetit:
   - buttons:
     - payload: Pas du tout
@@ -631,9 +656,10 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: As-tu perdu l'appétit?
+    button_type: reply
   utter_ask_dehydrate:
   - buttons:
-    - payload: Pas du tout
+    - payload:
       title: Pas du tout
     - payload: Pas vraiment
       title: Pas vraiment
@@ -646,6 +672,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: T'es-tu senti déshydraté ? (par exemple, soif)?
+    button_type: reply
   utter_ask_rapidement:
   - buttons:
     - payload: Pas du tout
@@ -661,6 +688,7 @@ responses:
     - payload: Beaucoup
       title: Beaucoup
     text: T'es-tu senti plus rapidement épuisé/essoufflé ? (p. ex., après avoir marché, monté des escaliers, s'être reposé)
+    button_type: reply
   utter_ask_urine:
   - buttons:
     - payload: Pas du tout
@@ -669,26 +697,28 @@ responses:
       title: Pas vraiment
     - payload: Rien d'anormal
       title: Rien d'anormal
-    - payload: Très Bien
-      title: Très Bien
-    - payload: Un peu
-      title: Un peu
+#    - payload: Très Bien
+#      title: Très Bien
+#    - payload: Un peu
+#      title: Un peu
     - payload: Beaucoup
       title: Beaucoup
     text: Tes yeux ou ton urine semblaient-ils plus jaunes que d'habitude ?
+    button_type: reply
   utter_ask_douleurs:
   - buttons:
     - payload: Douleur extrême insupportable
       title: Douleur extrême insupportable
-    - payload: Douleur intense m'empêchant de faire la plupart de mes activités
-      title: Douleur intense m'empêchant de faire la plupart de mes activités
-    - payload: Douleur continues supportables
-      title: Douleur continues supportables
+#    - payload: Douleur intense m'empêchant de faire la plupart de mes activités
+#      title: Douleur intense m'empêchant de faire la plupart de mes activités
+#    - payload: Douleur continues supportables
+#      title: Douleur continues supportables
     - payload: Douleur transitoires supportables
       title: Douleur transitoires supportables
     - payload: Aucune douleur
       title: Aucune douleur
     text: As-tu ressenti des douleurs liées à la drépanocytose ?
+    button_type: vertical
   utter_ask_activites:
   - buttons:
     - payload: Pas du tout
@@ -735,7 +765,7 @@ responses:
   - text: pourquoi ?
   utter_daily_q_confirm:
   - buttons:
-    - payload: /affirm
+    - payload: /affirm_daily_q
       title: Si
     - payload: /deny
       title: Affirm
@@ -748,16 +778,17 @@ responses:
   - text: Cool, commençons !
   - text: Génial!
   utter_welcome:
-  - text: Hi, I am Trevor a bot designed to help you manage sickle cell better!
+  - text: Hi {first_name}, Cette fonctionnalité de Trevor est encore au stade de prototype. N'hésite pas écrire dans le groupe de discussino si tu ne comprends pas quelque chose, si tu veux suggérer des modifications ou partager ton mécontentement :)
   utter_daily_inform:
   - text: I'll also need to ask you some daily questions. Let me know whenever you feel like answering them. In the meanwhile you can ask me questions have about SCD.
 actions:
 - validate_name_form
 - utter_submit
-- utter_consent
 - remind_questionnaire
 - draw_graph
 - validate_daily_form
+- action_fill_slots
+- action_feedback_initial_form
 forms:
   name_form:
     required_slots:
@@ -768,35 +799,36 @@ forms:
       Gérer_alternativement_les_douleurs:
       - type: from_text
       Gérer_la_dépression:
-      - type: from_text
+        - type: from_text
       Remettre_en_question:
-      - type: from_text
-      Réduire_des_douleurs:
-      - type: from_text
-      Surmonter_les_frustrations:
-      - type: from_text
-      Vivre_de_manière_autonome:
-      - type: from_text
-      Vivre_sans_limites:
-      - type: from_text
-      Vivre_sans_être_interrompu_par_la_maladie:
-      - type: from_text
-      age:
-      - type: from_text
+        - type: from_text
+           
+#      Réduire_des_douleurs:
+#      - type: from_text
+#      Surmonter_les_frustrations:
+#      - type: from_text
+#      Vivre_de_manière_autonome:
+#      - type: from_text
+#      Vivre_sans_limites:
+#      - type: from_text
+#      Vivre_sans_être_interrompu_par_la_maladie:
+#      - type: from_text
+#      age:
+#      - type: from_text
       atteindre_des_objectifs:
       - type: from_text
       choisir_de_maniere_informe:
       - type: from_text
       demander_du_soutien:
       - type: from_text
-      employment:
-      - type: from_text
+#      employment:
+#      - type: from_text
       faire_face_au_stress:
       - type: from_text
-      gender:
-      - type: from_text
-      genotype:
-      - type: from_text
+#      gender:
+#      - type: from_text
+#      genotype:
+#      - type: from_text
       maintenir_la_motivation:
       - type: from_text
       prendre_du_recul:
@@ -806,47 +838,69 @@ forms:
   daily_form:
     required_slots:
       activites:
-      - type: from_text
+        - type: from_text
+           
       alternatives:
-      - type: from_text
+        - type: from_text
+           
       bodypart:
-      - type: from_text
+        - type: from_text
+           
       chose_de_particular:
-      - type: from_text
+        - type: from_text
+           
       dehydrate:
-      - type: from_text
+        - type: from_text
+           
       dormi_la_nuit:
-      - type: from_text
+        - type: from_text
+           
       douleurs:
-      - type: from_text
+        - type: from_text
+           
       effort_exagéré:
-      - type: from_text
+        - type: from_text
+           
       froid_ou_ressenti:
-      - type: from_text
+        - type: from_text
+           
       globalment:
-      - type: from_text
+        - type: from_text
+           
       humeur:
-      - type: from_text
+        - type: from_text
+           
       journee:
-      - type: from_text
+        - type: from_text
+           
       lesquelles:
-      - type: from_text
+        - type: from_text
+           
       painkiller_count:
-      - type: from_text
+        - type: from_text
+           
       perdu_appetit:
-      - type: from_text
+        - type: from_text
+           
       porquoi:
-      - type: from_text
+        - type: from_text
+           
       pouvoir:
-      - type: from_text
+        - type: from_text
+           
       que_tu_souhaites:
-      - type: from_text
+        - type: from_text
+           
       rapidement:
-      - type: from_text
+        - type: from_text
+           
       senti_plus_fatigue:
-      - type: from_text
+        - type: from_text
+           
       senti_plus_stress:
-      - type: from_text
+        - type: from_text
+           
       urine:
-      - type: from_text
+        - type: from_text
+           
 e2e_actions: []
