--- a/data/rules.yml
+++ b/data/rules.yml
@@ -6,11 +6,11 @@ rules:
     - action: utter_positive_affirmation_qs
     - action: daily_form
     - active_loop: daily_form
-#- rule: start forms
-#  steps:
-#    - intent: start
-#    - action: action_fill_slots
-#    - action: utter_consent
+#- rule: respond to name_form good
+#      - slot_was_set:
+#        - autonomy_result: good
+#      - utter_bravo
+#      -
 - rule: daily form intial
   steps:
     - intent: show_questionairre
