--- a/data/rules.yml
+++ b/data/rules.yml
@@ -24,16 +24,16 @@ rules:
   - intent: affirm
   - action: name_form
   - active_loop: name_form
-- rule: Submit name form
-  condition:
-  - active_loop: name_form
-  steps:
-  - action: name_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: utter_intial_submit
-  - action: utter_daily_inform
+#- rule: Submit name form
+#  condition:
+#  - active_loop: name_form
+#  steps:
+#  - action: name_form
+#  - active_loop: null
+#  - slot_was_set:
+#    - requested_slot: null
+#  - action: utter_intial_submit
+#  - action: utter_daily_inform
 - rule: Submit daily form
   condition:
   - active_loop: daily_form
